Add a toggleColor function and do some styling.

--- a/style.css
+++ b/style.css
@@ -5,9 +5,14 @@
   margin: 20px auto;
   max-width: 500px; }
   .board .space {
-    background: lightgrey;
     border: 1px double black;
     padding: 5px;
     width: 130px;
     height: 130px;
-    float: left; }
+    float: left;
+    background: lightgrey;
+    transition: background 0.5s ease; }
+  .board .red {
+    background: red; }
+  .board .blue {
+    background: blue; }
